[tool.poetry]
name = "acw1g8"
version = "0.1.0"
description = ""
authors = ["NineGuest <71936949+ninguest@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tkdesigner = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
